--- a/views/partials/burger/eaten.handlebars
+++ b/views/partials/burger/eaten.handlebars
@@ -3,6 +3,6 @@
         <button class="ui orange right small button clean-buttons" data-burger-id="{{burger_id}}">Clean Up!</button>
     </div>
     <div class="content">
-        {{burger_name}} has been eaten.
+        {{burger_name}} has been eaten by {{customer_name}}.
     </div>
 </div>
